# passwordKeeper

./: .env.example  .gitignore  README.md  client_secret_288890427052-q2md4inn019hkei71pa9deu0d2vlt9cl.apps.googleusercontent.com.json  index.html  package-lock.json  package.json  release.jks  tailwind.config.js
.github/workflows/: build-windows.yml  release.yml
docs/oauth/: index.html
scripts/: sync-version.js
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AboutScreen.tsx  AppMenuBar.tsx  BackupModal.tsx  ChangePasswordModal.tsx  DeletionRequests.tsx  GoogleDriveModal.tsx  GroupForm.tsx  IconDisplay.tsx  IconPicker.tsx  ImportSharedFile.tsx  MasterPasswordScreen.tsx  PasswordDetail.tsx  PasswordForm.tsx  PasswordGrid.tsx  ShareModal.tsx  SharedUsersModal.tsx  Sidebar.tsx  Tooltip.tsx
src/hooks/: usePlatform.ts
src/services/: crypto.ts  googleDrive.ts  imageUtils.ts  localFile.ts  storage.ts
src/store/: vaultStore.ts
src/types/: vault.ts
