[package]
name = "password-keeper"
version = "0.1.0"
description = "Password Keeper - Secure Password Vault"
authors = []
license = ""
repository = ""
default-run = "password-keeper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

# HTTP via Java/JNI no Android (NDK não consegue fazer DNS/sockets externos)
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
ndk-context = "0.1"

# rfd não compila para Android — apenas em targets desktop
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[features]
# This feature is used for production builds or when a dev server is not specified
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
